--- a/public/vpaid-ad/style.css
+++ b/public/vpaid-ad/style.css
@@ -30,9 +30,10 @@ body, html {
     width: 300px;
 }
 
-h1 {
-    color: #333;
-    margin-bottom: 15px;
+h4 {
+    color: teal;
+    margin-bottom: 13px;
+    padding: 2px;
 }
 
 .form-group {
@@ -42,6 +43,8 @@ h1 {
 label {
     display: block;
     font-weight: bold;
+    font-size: 14px;
+    color:#28a745;
 }
 
 input {
